--- a/Assets/CSS/contact.css
+++ b/Assets/CSS/contact.css
@@ -1,7 +1,7 @@
 .contact {
 	height: 72px;
 	font-family: Segoe UI;
-	background-color: @window;
+	background-color: @Window;
 	color: @WindowText;
 	display: flex;
 	flex-direction: row;
@@ -9,20 +9,17 @@
 }
 
 .container {
-	height: 70px;
+	height: 71px;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	flex-grow: 1;
-	border-bottom: solid 2px rgba(60, 60, 60, 0.1);
+	border-bottom: solid 1px rgba(60, 60, 60, 0.1);
 	padding-right: 12px;
 }
 
-.contact:hover .container {
-	border-bottom: solid 2px #B0176BD1;
-}
-
 body:focus .container {
+	height: 70px;
 	border-bottom: solid 2px #176BD1;
 }
 
@@ -37,6 +34,7 @@ body:focus .container {
 	width: 48px;
 	height: 48px;
 	border-radius: 24px;
+	border: 1px solid rgba(60, 60, 60, 0.1);
 }
 
 .status {
