--- a/Assets/CSS/contactInfo.css
+++ b/Assets/CSS/contactInfo.css
@@ -1,6 +1,6 @@
 .container {
 	font-family: Segoe UI;
-	background-color: @window;
+	background-color: @Window;
 	color: @WindowText;
 	border-style: solid;
 	border-color: rgba(60, 60, 60, 0.2);
