--- a/Assets/CSS/message.css
+++ b/Assets/CSS/message.css
@@ -45,7 +45,8 @@
 	background-color: @Window;
 	padding: 12px 16px;
 	border-radius: 0px 8px 8px 8px;
-	margin-right:12px;
+	margin-right: 12px;
+	border-bottom: solid 1px rgba(60, 60, 60, 0.1);
 }
 
 .action {
