--- a/Assets/CSS/typingbox.css
+++ b/Assets/CSS/typingbox.css
@@ -1,10 +1,10 @@
 .typingBox {
-	padding: 10px 10px 10px 10px;
+	padding: 0px 10px 10px 10px;
 }
 
 .container {
 	font-family: Segoe UI;
-	background-color: @window;
+	background-color: @Window;
 	color: @WindowText;
 	display: flex;
 	flex-direction: row;
