--- a/Assets/CSS/ContactTooltip.Css
+++ b/Assets/CSS/ContactTooltip.Css
@@ -39,6 +39,7 @@
     min-width: 128px;
     min-height: 128px;
     border-radius: 100px;
+    border: 1px solid @WindowText/0.1;
     margin-top: 36px;
     margin-bottom: 16px;
 }
