--- a/Assets/CSS/message.css
+++ b/Assets/CSS/message.css
@@ -5,7 +5,7 @@
 	display: flex;
 	flex-direction: row;
 	align-items: flex-start;
-	padding: 4px 32px 4px 24px;
+	padding: 4px 32px 4px 16px;
 }
 
 .avatar {
@@ -15,6 +15,7 @@
 	min-height: 32px;
 	border-radius: 100px;
 	margin-right: 16px;
+	margin-top: 4px;
 }
 
 .container {
@@ -47,6 +48,7 @@
 	padding: 12px 16px;
 	border-radius: 0px 8px 8px 8px;
 	border-bottom: solid 1px @WindowText/0.1;
+	overflow-wrap: anywhere;
 }
 
 .more {
@@ -64,5 +66,19 @@
 }
 
 .textAndMore .more:hover {
+	opacity: 1;
+}
+
+.like {
+	width: 16px;
+	height: 16px;
+	min-width: 16px;
+	opacity: 0.5;
+	align-self: center;
+	margin-left: 8px;
+	margin-right: 16px;
+}
+
+.textAndMore .like:hover {
 	opacity: 1;
 }
