--- a/Assets/CSS/mymessage.css
+++ b/Assets/CSS/mymessage.css
@@ -6,6 +6,7 @@
 	flex-direction: column;
 	align-items: flex-end;
 	padding: 4px 32px;
+	margin-left: 96px;
 }
 
 .name {
@@ -26,4 +27,5 @@
 	background-color: @HotTrackedColor;
 	padding: 12px 16px;
 	border-radius: 8px 0px 8px 8px;
+	overflow-wrap: anywhere;
 }
