--- a/Assets/CSS/toolbar.css
+++ b/Assets/CSS/toolbar.css
@@ -14,6 +14,9 @@
 	font-weight: bold;
 	font-size: 18px;
 	line-height: 24px;
+	overflow-x: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 .buttonPanel {
